force-app/main/default/objects/Inspection_Report__c/Inspection_Report__c.object-meta.xml
<CustomObject>
    <label>Inspection Report</label>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Inspection Report Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Reports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>