force-app/main/default/objects/Inspection_Report__c/fields/Customer_Notification_Date__c.field-meta.xml
<CustomField>
    <fullName>Customer_Notification_Date__c</fullName>
    <label>Customer Notification Date</label>
    <type>Date</type>
</CustomField>