force-app/main/default/objects/Inspection_Report__c/fields/Equipment__c.field-meta.xml
<CustomField>
    <fullName>Equipment__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Equipment</label>
    <referenceTo>Equipment_Asset__c</referenceTo>
    <relationshipLabel>Inspection Reports</relationshipLabel>
    <relationshipName>Inspection_Reports</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>