force-app/main/default/objects/Inspection_Report__c/fields/Estimated_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Replacement_Cost__c</fullName>
    <label>Estimated Replacement Cost</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>