force-app/main/default/objects/Inspection_Report__c/fields/Inspection_Date__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Date__c</fullName>
    <label>Inspection Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>