force-app/main/default/objects/Inspection_Report__c/fields/Inspection_Type__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Type__c</fullName>
    <label>Inspection Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Annual Compliance</fullName>
            </value>
            <value>
                <fullName>Pre-Purchase</fullName>
            </value>
            <value>
                <fullName>Post-Repair</fullName>
            </value>
            <value>
                <fullName>Warranty</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Energy Audit</fullName>
            </value>
            <value>
                <fullName>Code Compliance</fullName>
            </value>
            <value>
                <fullName>Routine</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>