force-app/main/default/objects/Inspection_Report__c/fields/Inspector__c.field-meta.xml
<CustomField>
    <fullName>Inspector__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inspector</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inspection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>