force-app/main/default/objects/Inspection_Report__c/fields/Maintenance_Visit__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance Visit</label>
    <referenceTo>Maintenance_Visit__c</referenceTo>
    <relationshipLabel>Inspection Reports</relationshipLabel>
    <relationshipName>Inspection_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>