force-app/main/default/objects/Inspection_Report__c/fields/Next_Inspection_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Inspection_Due_Date__c</fullName>
    <label>Next Inspection Due Date</label>
    <type>Date</type>
</CustomField>