force-app/main/default/objects/Inspection_Report__c/fields/PassFail__c.field-meta.xml
<CustomField>
    <fullName>PassFail__c</fullName>
    <label>Pass/Fail</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pass</fullName>
            </value>
            <value>
                <fullName>Fail</fullName>
            </value>
            <value>
                <fullName>Conditional Pass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>