force-app/main/default/objects/Inspection_Report__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>Recommendations</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>