force-app/main/default/objects/Inspection_Report__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Action Required</fullName>
            </value>
            <value>
                <fullName>Continued Monitoring</fullName>
            </value>
            <value>
                <fullName>Schedule Repair</fullName>
            </value>
            <value>
                <fullName>Schedule Replacement</fullName>
            </value>
            <value>
                <fullName>Immediate Action Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>