force-app/main/default/objects/Inspection_Report__c/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <formula>Equipment__r.Site__r.Name</formula>
    <label>Site</label>
    <type>Text</type>
</CustomField>